観察会の項目を追加 class event

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <nav>
       <ul>
         <li><a href="#home">ホーム</a></li>
-        <li><a href="#about">概要</a></li>
+        <li><a href="#about">活動内容</a></li>
         <li><a href="#plants">植物一覧</a></li>
         <li><a href="#achievement">実績</a></li>
+        <li><a href="#events">観察会</a></li>
         <li><a href="#contact">お問い合わせ</a></li>
       </ul>
     </nav>
