--- a/index.html
+++ b/index.html
@@ -103,26 +103,19 @@
     </div>
   </section>
 
-  <section id="contact">
-    <div class="container">
-      <h2>お問い合わせ</h2>
-      <form id="contact-form" action="process.php" method="post">
-        <div class="form-group">
-          <label for="name">お名前</label>
-          <input type="text" id="name" name="name" required>
-        </div>
-        <div class="form-group">
-          <label for="email">メールアドレス</label>
-          <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-          <label for="message">メッセージ</label>
-          <textarea id="message" name="message" required></textarea>
-        </div>
-        <button type="submit">送信</button>
-      </form>
-    </div>
-  </section>
+  <form action="confirm.php" method="post">
+    <p class="form_tit">会社名<span class="require">必須</span></p>
+    <p><input name="company_name" type="text"></p>
+    <p class="form_tit">お名前<span class="require">必須</span></p>
+    <p><input name="name" type="text"></p>
+    <p class="form_tit">メールアドレス</p>
+    <p><input type="email" name="mail" autocomplete="email"></p>
+    <p class="form_tit">電話番号<span class="require">必須</span></p>
+    <p><input type="tel" name="tel" autocomplete="tel"></p>
+    <p class="form_tit">お問い合わせ内容の詳細</p>
+    <p><textarea name="detail" cols="" rows=""></textarea></p>
+    <p class="align-center"><input name="submit" type="submit" value="確認"></p>
+  </form>
 
   <footer>
     <div class="container">
